<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr">

        <LinearLayout
            android:id="@+id/layoutIso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/txtIso"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutIso"
            android:orientation="horizontal">

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/txtName"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutName"
            android:orientation="horizontal">

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/txtPhone"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:tint="@color/colorAccent"
            android:padding="8dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>